--- a/map/build.gradle
+++ b/map/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/AMap_Location_V3.5.0_20170731.jar')
     compile files('libs/AMap3DMap_5.3.0_AMapNavi_5.3.0_20170815.jar')
+    compile files('libs/AMap_Search_V5.3.1_20170817.jar')
 }
