--- a/map/build.gradle
+++ b/map/build.gradle
@@ -28,7 +28,7 @@ android {
         }
     }
     packagingOptions {
-        exclude 'lib/*'
+
     }
 }
 
@@ -37,7 +37,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.github.zhangliangbo:RxCollection:1.0.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.zhangliangbo:RxCollection:1.0.2'
+    compile 'com.nineoldandroids:library:2.4.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/AMap_Location_V3.5.0_20170731.jar')
     compile files('libs/AMap3DMap_5.3.0_AMapNavi_5.3.0_20170815.jar')
